add forgotten closing div tag on index template

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -27,6 +27,7 @@
                 <p>12-14 Μαίου 2017: 30 συμμετέχοντες ποικίλων ειδικοτήτων δημιούργουν 7 ομάδες και δουλεύουν στους χώρους του OK!Thess υποστηριζόμενοι απο 8 μέντορες. Δες το τριήμερο σε 5 φωτογραφίες.</p>
                 <a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=4" role="button">Περισσότερα &raquo;</a>
             </div>
+        </div>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
