add django urls on nav layout

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -66,11 +66,11 @@
                         <li><a tabindex="-1" href="{% url 'main:about' %}#coworking">Συνεργατικός χώρος</a></li>
                     </ul>
                 </li>
-                <li><a href="#teams">Ομάδες</a></li>
-                <li><a href="#news">Νέα</a></li>
-                <li><a href="#knowledge-base">Γνωσιακή Βάση</a></li>
-                <li><a href="#apply">Συμμετοχή</a></li>
-                <li><a href="#hi">Επικοινωνία</a></li>
+                <li><a href="{% url 'main:teams' %}">Ομάδες</a></li>
+                <li><a href="{% url 'main:about' %}">Νέα</a></li>
+                <li><a href="{% url 'main:about' %}">Γνωσιακή Βάση</a></li>
+                <li><a href="{% url 'main:about' %}">Συμμετοχή</a></li>
+                <li><a href="{% url 'main:about' %}">Επικοινωνία</a></li>
             </ul>
         </div>
     </nav>
