--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -77,6 +77,21 @@ html, body {
   font-size: 24px;
 }
 
+.teams-item {
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+.teams-item-img {
+  height: 160px;
+  margin-bottom: 20px;
+}
+
+.teams-item-text {
+  font-size: 15px;
+  color: #777;
+}
+
 footer {
   background: #fff;
   margin-top: 50px;
