improve index markup

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,29 +4,88 @@
 
 {% block content %}
     <section class="jumbotron">
-        <div class="container text-center">
-            <h1>Συνεργάτης<br>στα πρώτα βήματα</h1>
+        <div class="jumbotron-cta">
+            <h1>Συνεργάτης στα πρώτα βήματα</h1>
             <p>To OK!Thess παρέχει χώρο και τεχνική υποστήριξη σε ομάδες ανθρώπων με καινοτόμες ιδέες.</p>
             <a href="#" class="btn btn-lg btn-cta">Apply now &raquo;</a>
         </div>
     </section>
-    <section class="container-fluid marketing">
+    <section class="container-fluid infocomponent">
         <div class="row">
-            <div class="col-md-4 col-sm-4 marketing-item">
-                <h2>Call for Startups</h2>
-                <p>Χρειάζεσαι βοήθεια στο επιχειρηματικό σου ξεκίνημα; Το OK!Thess είναι εδώ για να σου την προσφέρει! Συμπλήρωσε και κατάθεσε την αίτηση συμμετοχής τώρα ή και μέχρι τις 13 Σεπτεμβρίου του 2017.</p>
-                <a class="btn btn-secondary" href="http://okthess.gr/app.php" role="button">Αίτηση &raquo;</a>
+            <div class="col-md-4 col-md-offset-4">
+                <div class="infocomponent-main">
+                    <h2><strong>Τι κάνουμε</strong></h2>
+                    <p>
+                        Ο ευρύς στόχος του OK!Thess είναι η ουσιώδης συμβολή στην
+                        δημιουργία ενός οικοσυστήματος καινοτομίας που περιλαμβάνει
+                        όλους όσους είναι σε θέση και επιθυμούν να συμβάλλουν στην
+                        ανάπτυξη της καινοτομίας στην πόλη.
+                    </p>
+                    <br>
+                    <a class="btn btn-cta" href="http://okthess.gr/dev/about.html" role="button">Μάθε περισσότερα »</a>
+                </div>
             </div>
-            <div class="col-md-4 col-sm-4 marketing-item">
-                <h2>Θέσεις Εργασίας</h2>
-                <p>Η ομάδα του ΟΚ!Τhess μεγαλώνει και αναζητά νέους συνεργάτες. Οι υποψήφιοι καλούνται να εκδηλώσουν το ενδιαφέρον τους αποστέλλοντας αίτηση ηλεκτρονικά, μέχρι και τις 21 Αυγούστου 2017.</p>
-                <a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=5" role="button">Περισσότερα &raquo;</a>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-sm-4">
+                <div class="media">
+			        <div class="media-left">
+			            <img src="http://www.okthess.gr/img/thumb.png" class="media-object">
+			        </div>
+			        <div class="media-body">
+                        <h3 class="media-heading">Call for Startups</h3>
+					    <p>
+                            Χρειάζεσαι βοήθεια στο επιχειρηματικό σου ξεκίνημα;
+                            Το OK!Thess είναι εδώ για να σου την προσφέρει!
+                            Συμπλήρωσε και κατάθεσε την αίτηση συμμετοχής τώρα ή
+                            και μέχρι τις 13 Σεπτεμβρίου του 2017.
+                        </p>
+						<a href="http://okthess.gr/dev/news.html">Περισσότερα »</a>
+			        </div>
+			    </div>
             </div>
-            <div class="col-md-4 col-sm-4 marketing-item">
-                <h2>Startup Weekend</h2>
-                <p>12-14 Μαίου 2017: 30 συμμετέχοντες ποικίλων ειδικοτήτων δημιούργουν 7 ομάδες και δουλεύουν στους χώρους του OK!Thess υποστηριζόμενοι απο 8 μέντορες. Δες το τριήμερο σε 5 φωτογραφίες.</p>
-                <a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=4" role="button">Περισσότερα &raquo;</a>
+            <div class="col-md-4 col-sm-4">
+                <div class="media">
+			        <div class="media-left">
+			            <img src="http://www.okthess.gr/img/thumb.png" class="media-object">
+			        </div>
+			        <div class="media-body">
+                        <h3 class="media-heading">Θέσεις Εργασίας</h3>
+					    <p>
+                            Η ομάδα του ΟΚ!Τhess μεγαλώνει και αναζητά νέους συνεργάτες.
+                            Οι υποψήφιοι καλούνται να εκδηλώσουν το ενδιαφέρον τους
+                            αποστέλλοντας αίτηση ηλεκτρονικά, μέχρι και τις 21 Αυγούστου 2017.
+                        </p>
+						<a href="http://okthess.gr/dev/news.html">Περισσότερα »</a>
+			        </div>
+			    </div>
             </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="media">
+			        <div class="media-left">
+			            <img src="http://www.okthess.gr/img/thumb.png" class="media-object">
+			        </div>
+			        <div class="media-body">
+                        <h3 class="media-heading">Startup Weekend</h3>
+					    <p>
+                            12-14 Μαίου 2017: 30 συμμετέχοντες ποικίλων ειδικοτήτων
+                            δημιούργουν 7 ομάδες και δουλεύουν στους χώρους του
+                            OK!Thess υποστηριζόμενοι απο 8 μέντορες. Δες το τριήμερο
+                            σε 5 φωτογραφίες.
+                        </p>
+						<a href="http://okthess.gr/dev/news.html">Περισσότερα »</a>
+			        </div>
+			    </div>
+            </div>
+        </div>
+    </section>
+    <section class="section-events">
+         <div class="container" id="3">
+            <div class="row events text-center"></div>
+            <div class="row no-events text-center" style="display: none">No events currently</div>
+        </div>
+        <div class="container text-center">
+            <p><a class="btn" href="http://okthess.gr/dev/thessaloniki-events.html" role="button">See all events &raquo;</a></p>
         </div>
     </section>
 
