improve index styling

--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -1,3 +1,4 @@
+/* html components */
 html, body {
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
@@ -6,12 +7,38 @@ html, body {
   background-color: #fafafa;
 }
 
+p {
+  font-size: 15px;
+}
+
+/* general components */
+.btn-cta {
+  color: #fff;
+  border: 1px solid #0a3c59;
+  text-shadow: #1e4158 0 1px 0;
+  background: #1c599b;
+  background: linear-gradient(0deg, #1c599b, #1c599b);
+}
+
+.btn-cta:hover {
+  color: #fff;
+  background: linear-gradient(180deg, #65a9d7, #3e779d);
+}
+
+.media-object {
+  max-width: 200px;
+  max-height: 160px;
+}
+
+/* layout:navbar */
 .navbar {
   margin-bottom: 0;
+  border-bottom: 3px solid #222;
 }
 
 .navbar-default .navbar-nav > li > a {
-  font-size: 15px;
+  font-size: 14px;
+  font-weight: 100;
   color: #000;
 }
 
@@ -39,44 +66,85 @@ html, body {
   height: 35px;
 }
 
+/* home page */
 .jumbotron {
-  background: url('/static/main/img/background.png');
+  background: url('/static/main/img/background-photo.jpg');
   background-position: top left;
   background-size: cover;
   box-shadow: inset 0 0 300px 20px rgba(0, 0, 0, 0.1);
-  /* box-shadow: inset 0 0 200px -40px rgba(0, 0, 0, 0.75);  */
   color: #fff;
+  border-bottom: 3px solid #ee4031;
+  min-height: 500px;
 }
 
-.btn-cta {
+.jumbotron-cta {
   color: #fff;
-  border: 1px solid #fff;
+  background: rgba(0, 0, 0, 0.8);
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 180px;
+  padding: 15px;
+  border-radius: 2px;
+  text-align: center;
 }
 
-.btn-cta:hover {
-  background: #fff;
+.jumbotron-cta h1 {
+  font-size: 32px;
+  font-weight: bold;
 }
 
-.btn-secondary {
-  color: #000;
-  opacity: 0.7;
-  background-color: #e9e9e9;
-  border: 1px solid #ee4031;
-}
-
-.marketing {
+.infocomponent {
   padding-bottom: 40px;
 }
 
-.marketing-item {
-  padding-left: 50px;
-  padding-right: 50px;
+.infocomponent-main {
+  background: rgba(28, 89, 155, 0.5);
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  border-radius: 5px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 70px;
 }
 
+.infocomponent-main h2 {
+  font-size: 20px;
+}
+
+.section-events {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.event {
+	min-width: 100%;
+}
+
+.eventName {
+	font-size: 20px;
+	font-weight: bold;
+}
+
+.eventDate {
+	color: #808080;
+	font-size: 12px;
+}
+
+.eventDesc {
+	width: 80%;
+	margin: 0 auto;
+	font-size: 13px;
+}
+
+/* about page */
 .panel-title > a {
   font-size: 24px;
 }
 
+/* teams page */
 .teams-item {
   text-align: center;
   margin-bottom: 60px;
@@ -92,6 +160,7 @@ html, body {
   color: #777;
 }
 
+/* layout:footer */
 footer {
   background: #fff;
   margin-top: 50px;
@@ -99,6 +168,7 @@ footer {
 
 .footer-content-map {
   width: 100%;
+  border: 2px solid #F9D94F;
 }
 
 #footer-content-map-content {
@@ -116,14 +186,10 @@ footer {
   top: -40px;
 }
 
-.footer-content {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
 .footer-content-item {
   text-transform: uppercase;
   font-size: 18px;
+  font-weight: 400;
   border-bottom: 1px solid #eee;
   padding-bottom: 10px;
   margin-bottom: 20px;
@@ -135,7 +201,7 @@ footer {
   margin-bottom: 50px;
 }
 
-.footer-content-love {
+.footer-content-love p {
   text-align: right;
   font-size: 10px;
   color: #2ecc40;
