--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -14,7 +14,7 @@
                 <div class="panel-heading" role="tab" id="headingWhat">
                     <h2 class="panel-title">
                         <a role="button" data-toggle="collapse" data-parent="#accordion" href="#what" aria-expanded="true" aria-controls="what">
-                            Τι κάνουμε <b class="caret"></b>
+                            Τι κάνουμε
                         </a>
                     </h2>
                 </div>
@@ -78,7 +78,7 @@
                 <div class="panel-heading" role="tab" id="headingHow">
                     <h2 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#how" aria-expanded="false" aria-controls="how">
-                            Πως το κάνουμε <b class="caret"></b>
+                            Πως το κάνουμε
                         </a>
                     </h2>
                 </div>
@@ -116,7 +116,7 @@
                 <div class="panel-heading" role="tab" id="headingParticipate">
                     <h2 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#participate" aria-expanded="false" aria-controls="participate">
-                            Πως συμμετέχω <b class="caret"></b>
+                            Πως συμμετέχω
                         </a>
                     </h2>
                 </div>
@@ -171,7 +171,7 @@
                 <div class="panel-heading" role="tab" id="headingCoworking">
                     <h2 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#coworking" aria-expanded="false" aria-controls="coworking">
-                            Συνεργατικός χώρος <b class="caret"></b>
+                            Συνεργατικός χώρος
                         </a>
                     </h2>
                 </div>
@@ -197,15 +197,24 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function () {
-            $(location.hash).collapse({
+
+            // when a url with a hash is loaded open accordion and add '-' sign
+            var $elemId = $(location.hash);
+            $elemId.collapse({
                 parent: $('#accordion'),
             });
+            $elemId.parent().find('.panel-title').addClass('panel-title-toggle');
 
-            window.addEventListener('hashchange', function () {
-                $(location.hash).collapse({
-                    parent: $('#accordion'),
-                });
-            }, false);
+            // add event listeners to change url hash and toggle between '+' and '-'
+            $('.panel-collapse').on('show.bs.collapse', function () {
+                var newHash = '#' + this.id;
+                history.pushState(null, null, newHash);
+                $(this).parent().find('.panel-title').addClass('panel-title-toggle');
+            });
+
+            $('.panel-collapse').on('hidden.bs.collapse', function () {
+                $(this).parent().find('.panel-title').removeClass('panel-title-toggle');
+            });
         });
     </script>
 {% endblock %}
