fix layout news link

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -67,7 +67,7 @@
                     </ul>
                 </li>
                 <li><a href="{% url 'main:teams' %}">Ομάδες</a></li>
-                <li><a href="{% url 'main:about' %}">Νέα</a></li>
+                <li><a href="{% url 'main:news' %}">Νέα</a></li>
                 <li><a href="{% url 'main:about' %}">Γνωσιακή Βάση</a></li>
                 <li><a href="{% url 'main:about' %}">Συμμετοχή</a></li>
                 <li><a href="{% url 'main:about' %}">Επικοινωνία</a></li>
